# clipmanager

./: CI_CD_SETUP_SUMMARY.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  manual-build.yml  release.yml
benches/: clipboard_benchmark.rs
docs/: ci-cd-guide.md  internationalization_changes.md  technical_design.md  windows-usage-guide.md
scripts/: build-release.sh  build-windows.sh  test-ci.sh  test-cross-compile.sh
src/: app.rs  error.rs  lib.rs  main.rs
src/clipboard/: handler.rs  mod.rs  monitor.rs  types.rs
src/config/: mod.rs  settings.rs
src/i18n/: mod.rs  texts.rs
src/storage/: database.rs  mod.rs  models.rs
src/ui/: font_manager.rs  main_window.rs  mod.rs  theme.rs
src/ui/components/: mod.rs  settings_window.rs
tests/: integration_tests.rs
