[package]
name = "clipmanager"
version = "0.1.0"
edition = "2021"
authors = ["ClipManager Team"]
description = "A cross-platform clipboard manager built with Rust and egui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/clipmanager/clipmanager"

[dependencies]
# GUI 框架
eframe = { version = "0.32.0" }
egui = "0.32.0"

# 剪切板操作
arboard = "3.4"

# 数据持久化
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 错误处理
anyhow = "1.0"
thiserror = "2.0.12"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 配置文件
directories = "6.0.0"
toml = "0.8"

# 图片处理
image = "0.25"

# 字体处理
font-kit = "0.14.3"
pathfinder_geometry = "0.5"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.6.0"

[[bench]]
name = "clipboard_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
